[gd_scene load_steps=3 format=3 uid="uid://bh0yhr0uqf60u"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_yy04h"]

[sub_resource type="Theme" id="Theme_hgn2s"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hgn2s")
script = ExtResource("1_yy04h")

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 802.0
offset_top = 387.0
offset_right = -802.0
offset_bottom = -435.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Username"
alignment = 1

[node name="HostButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="JoinButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
